# university-performance-analyzer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements-optional.txt  requirements.txt  streamlit.toml
.github/workflows/: ci.yml
sample_data/: sample_students.csv
src/: __init__.py  analytics.py  config.py  data_loader.py  grading.py  models.py  pdf_report.py  ui.py
tests/: __init__.py  conftest.py  test_analytics.py  test_data_loader.py  test_grading.py
